# catchrobo2024

./: readme.md
ESP/can_control/: DJIMotorCtrlESP.hpp  PID_CONTROL.hpp  adc_read.hpp  can_control.ino  cybergear_can_interface.hpp  cybergear_controller.cpp  cybergear_controller.hh  cybergear_driver.cpp  cybergear_driver.hh  udp_read.hpp  udp_read_write.hpp
ESP/can_control/include/: DJIMotorCtrlESP.hpp  adc_read.hpp  cybergear_can_interface.hpp  cybergear_driver.cpp
ESP/cyber_control/: cyber_control.ino
ESP/cyber_control/examples/change_motor_can_id/: change_motor_can_id.ino
ESP/cyber_control/examples/control_mode_example/: control_mode_example.ino
ESP/cyber_control/examples/dump_ram_test/: dump_ram_test.ino
ESP/cyber_control/src/: cybergear_can_interface_esp32.cpp  cybergear_can_interface_esp32.hh  cybergear_controller.cpp  cybergear_driver.cpp  cybergear_twai_interface.cpp
ESP/esp_read/: esp_read.ino  udp_read.hpp
ESP/motor_control/: motor_control.hpp
catchrobo_ros/catch_cpp/: CMakeLists.txt  package.xml
catchrobo_ros/catch_cpp/src/: dynamixel_node.cpp  finger_control_node.cpp  pub_udp_node.cpp  read_serial_node.cpp  wrist_control_node.cpp  wrist_node.cpp  xl320_node.cpp
catchrobo_ros/catch_py/: package.xml  setup.cfg  setup.py
catchrobo_ros/catch_py/launch/: main.launch.py  realsense.launch.py  rs.launch.py
catchrobo_ros/realsense-ros/realsense2_camera/src/: base_realsense_node.cpp  rs_node_setup.cpp
catchrobo_ros/realsense2_camera/src/: image_publisher.cpp  tfs.cpp
esp_read/: esp_read.ino  read_2.ino
